@@ -49,6 +49,11 @@ abandon, bind, unbind
 all operations
 .RE
 .TP
+.B logold <filter>
+Specify a filter for matching against Deleted and Modified entries. If
+the entry matches the filter, the old contents of the entry will be
+logged along with the current request.
+.TP
 .B logpurge <age> <interval>
 Specify the maximum age for log entries to be retained in the database,
 and how often to scan the database for old entries. Both the
@@ -94,6 +99,7 @@ succeed or not. The default is FALSE.
 	overlay accesslog
 	logdb cn=log
 	logops writes reads
+	logold (objectclass=person)
 .fi
 
 .SH SCHEMA
@@ -310,7 +316,12 @@ to its deletion. The values are formatted as
 attribute: value
 .RE
 .PD
-This option is not yet implemented.
+The
+.B reqOld
+attribute is only populated if the entry being deleted matches the
+configured
+.B logold
+filter.
 
 .LP
 .RS 4
@@ -329,7 +340,12 @@ attribute, which was already described above in the Add operation. It may
 optionally contain the previous contents of any modified attributes in the
 .B reqOld
 attribute, using the same format as described above for the Delete operation.
-This option is not yet implemented.
+The
+.B reqOld
+attribute is only populated if the entry being modified matches the
+configured
+.B logold
+filter.
 
 .LP
 .RS 4
